--- a/app/build.gradle
+++ b/app/build.gradle
@@ -49,6 +49,13 @@ dependencies {
     implementation 'com.google.android.material:material:1.0.0'
 
 
+    implementation 'com.squareup.retrofit2:retrofit:2.3.0'
+    implementation 'com.squareup.okhttp3:logging-interceptor:3.4.1'
+    implementation 'com.squareup.okhttp3:okhttp:3.4.1'
+    implementation 'com.squareup.retrofit2:converter-gson:2.0.2'
+
+    implementation 'com.facebook.stetho:stetho:1.5.0'
+    implementation 'com.facebook.stetho:stetho-okhttp3:1.5.0'
 
     annotationProcessor "androidx.room:room-compiler:$room_version"
     annotationProcessor 'com.jakewharton:butterknife-compiler:10.1.0'
